<resources>
    <string name="app_name">DCom</string>
    <string name="app_des">Mô tả ứng dụng</string>
    <string name="text_to_speech">Đọc văn bản</string>
    <string name="text_to_speech_des">Chuyển văn bản thành âm thanh</string>
    <string name="speech_to_text">Nhận diện âm thanh</string>
    <string name="speech_to_text_short">Nhận diện âm</string>
    <string name="speech_to_text_des">Chuyển giọng nói của người đối diện thành văn bản</string>
    <string name="fast_communication">Giao tiếp nhanh</string>
    <string name="fast_communication_short">Đã lưu</string>
    <string name="fast_communication_des">Các mẫu câu hay sử dụng</string>
    <string name="fast_communication_setting">Tùy chỉnh mẫu câu giao tiếp nhanh</string>
    <string name="fast_communication_setting_des">Tạo, sửa, xoá mẫu câu giao tiếp nhanh theo ý muốn của riêng mình</string>
    <string name="conversation_history">Lịch sử hội thoại</string>
    <string name="conversation_history_short">Lịch sử</string>
    <string name="conversation_history_des">Xem lại một cuộc hội thoại được lưu</string>
    <string name="emergency_signal">Tín hiệu khẩn cấp</string>
    <string name="emergency_signal_short">Khẩn cấp</string>
    <string name="emergency_signal_des">Phát tín hiệu yêu hỗ trợ khẩn cấp</string>
    <string name="speed">Tốc độ</string>
    <string name="pitch">Độ cao</string>
    <string name="volume">Âm lượng</string>
    <string name="message_example1">Đây là nội dung tin nhắn</string>
    <string name="time_example">11:29 AM</string>
    <string name="vietnamese_vietnam">Vietnamese (Vietnam)</string>
    <string name="example_paragraph">Nhận diện âm thanh\nChuyển giọng nói của người đối diện thành văn bản\nTạo, sửa, xoá mẫu câu giao tiếp nhanh theo ý muốn của riêng mình\nXem lại một cuộc hội thoại được lưu</string>
    <string name="example_paragraph2">Nhận diện âm thanh. Chuyển giọng nói của người đối diện thành văn bản. Tạo, sửa, xoá mẫu câu giao tiếp nhanh theo ý muốn của riêng mình. Xem lại một cuộc hội thoại được lưu</string>
    <string name="emergency">Emergency</string>
    <string name="name_example">Đoàn Thanh Sơn</string>
    <string name="emergency_information">Thông tin khẩn cấp</string>
    <string name="call_113">Gọi 113</string>
    <string name="call_114">Gọi 114</string>
    <string name="call_115">Gọi 115</string>
    <string name="des_113">Cảnh sát</string>
    <string name="des_114">Cứu hỏa</string>
    <string name="des_115">Cấp cứu</string>
    <string name="dial_pad">Quay số</string>
    <string name="title">Tiêu đề</string>
    <string name="text_to_speech_hint">Enter text to be spoken here</string>
    <string name="cancel">Hủy</string>
    <string name="select">Chọn</string>
    <string name="communication">Giao tiếp</string>
    <string name="setting">Cài đặt</string>
    <string name="favorite">Yêu thích</string>
    <string name="history">Lịch sử</string>
    <string name="type_your_reply_here">Nhập câu trả lời của bạn vào đây…</string>
    <string name="clear_type_text">Xóa</string>
    <string name="content">Nội dung</string>
    <string name="search_note">Tìm ghi chú</string>
    <string name="delete_note">Xóa ghi chú</string>
    <string name="delete">Xóa</string>
    <string name="delete_this_note">Xóa ghi chú này?</string>
    <string name="listen">Nghe</string>
    <string name="delete_conversation_title">Xoá hội thoại này?</string>
    <string name="save_conversation_title">Lưu hội thoại</string>
    <string name="delete_conversation_des">Đoạn hội thoại sẽ không còn xuất hiện ở bất kỳ đâu. Bạn có thể lưu lại đoạn hội thoại để xem lại sau nếu muốn.</string>
    <string name="delete_conversation_des2">Đoạn hội thoại sẽ không còn xuất hiện ở bất kỳ đâu và không thể khôi phục</string>
    <string name="delete_note_des">Ghi chú sẽ không còn xuất hiện ở bất kỳ đâu.</string>
    <string name="deleted">Đã xóa</string>
    <string name="undo">Hoàn tác</string>
    <string name="save">Lưu</string>
    <string name="saved">Đã lưu</string>
    <string name="conversation_title">Tiêu đề hội thoại</string>
    <string name="save_fail">Lưu không thành không. Vui lòng thử lại sau</string>
    <string name="speak_success">Phát thành công</string>
    <string name="settings">Cài đặt</string>
    <string name="go_back">Trở lại</string>
    <string name="delete_conversation">Xóa đoạn hội thoại này</string>
    <string name="save_conversation">Lưu đoạn hội thoại này</string>
    <string name="cant_find_conversation">Không tìm thấy hội thoại, vui lòng thử lại sau</string>
    <string name="talk">Phát</string>
    <string name="close">Đóng</string>
    <string name="change_color">Đổi màu</string>
    <string name="more_option">Lựa chọn khác</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="search_in_dcom">Tìm kiếm trong ứng dụng</string>
    <string name="delete_note_title">Xóa ghi chú này?</string>
    <string name="untitled">Không có tiêu đề</string>
    <string name="help_and_feedback">Trợ giúp và phản hồi</string>
    <string name="storage">Lưu trữ</string>
    <string name="done">Xong</string>
    <string name="conversation_title_example">Hội thoại lúc </string>
    <string name="notifications">Thông báo</string>
    <string name="theme">Chủ đề</string>
    <string name="choose_theme">Chọn chủ đề</string>
    <string name="system_default">Mặc định hệ thống</string>
    <string name="fast_sentence">Mẫu câu nhanh</string>
    <string name="select_all">Chọn tất cả</string>
    <string name="update_conversation_title">Sửa tiêu đề hội thoại</string>
    <string name="storage_example">Đã sử dụng 0 MB </string>
    <string name="clear_all_data">Xóa dữ liệu</string>
    <string name="notifications_settings">Cài đặt thông báo</string>
    <string name="setting_other">Cài đặt khác</string>
    <string name="auto_mode">Chế độ tự động</string>
    <string name="auto_mode_des">Tự động cập nhật mẫu câu nhanh theo tần suất sử dụng</string>
    <string name="clear_all_data_success">Xóa dữ liệu thành công</string>
    <string name="dark">Tối</string>
    <string name="light">Sáng</string>
    <string name="delete_database_des">Toàn bộ dữ liệu về mẫu câu nhanh và hội thoại sẽ bị xóa và không thể khôi phục</string>
    <string name="delete_database_title">Xóa dữ liệu ứng dụng</string>
    <string name="speak">Phát</string>
    <string name="no_frequently_used">Chưa có dữ liệu</string>
    <string name="input_empty">Không thể phát nội dung trống</string>
</resources>
