<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itmSelectChangeColor"
        android:icon="@drawable/ic_outline_color_lens_24"
        android:title="@string/change_color"
        android:contentDescription="@string/change_color"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itmSelectDelete"
        android:icon="@drawable/ic_baseline_delete_outline_24"
        android:title="@string/delete"
        android:contentDescription="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itmSelectEdit"
        android:icon="@drawable/ic_outline_edit_24"
        android:title="@string/edit"
        android:contentDescription="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:title="@string/more_option"
        android:visible="false"
        android:contentDescription="@string/more_option"
        app:showAsAction="never" />

</menu>
