<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.setting.SettingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtbSettingTopBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        android:elevation="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/go_back"
        app:navigationIcon="@drawable/ic_round_arrow_back_24"
        app:navigationIconTint="?attr/colorOnSurface"
        app:title="@string/settings"
        app:titleTextColor="?attr/colorOnSurface" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/theme"
        android:textAppearance="?attr/textAppearanceLabelLarge"
        android:textColor="?attr/colorPrimary" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvSettingTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_theme"
                android:textColor="?attr/colorOnSurface" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/system_default"
                android:textColor="?attr/colorOnSurfaceVariant" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>
