<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.favorite.note.NoteActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtbNoteTopBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/note_menu"
        app:navigationContentDescription="@string/go_back"
        app:navigationIcon="@drawable/ic_round_arrow_back_24"
        app:navigationIconTint="?attr/colorOnSurface"
        app:titleTextColor="?attr/colorOnSurface" />

    <EditText
        android:id="@+id/edtNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@color/colorSurface"
        android:hint="@string/title"
        android:inputType="text"
        android:textColor="?attr/colorOnBackground"
        android:textColorHint="?attr/colorOutline"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/mtbNoteTopBar"
        tools:text="@string/example_paragraph2" />

    <EditText
        android:id="@+id/edtNoteContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="6dp"
        android:background="@color/colorSurface"
        android:gravity="top"
        android:hint="@string/content"
        android:inputType="textMultiLine"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textColorHint="?attr/colorOutline"
        android:textSize="11sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNoteTitle"
        tools:text="@string/example_paragraph2" />

    <EditText
        android:id="@+id/edtCustomEditTextInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/colorSurfaceVariant"
        android:gravity="top"
        android:hint="@string/type_your_reply_here"
        android:inputType="textMultiLine"
        android:paddingHorizontal="10dp"
        android:paddingTop="20dp"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textColorHint="?attr/colorOutline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtNoteTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
