<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtbNoteTopBar"
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/go_back"
        app:menu="@menu/note_menu"
        app:navigationIcon="@drawable/ic_round_arrow_back_24"
        app:navigationIconTint="?attr/colorOnSurface"
        app:titleTextColor="?attr/colorOnSurface" />
    
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtNoteTitle"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:background="?attr/colorSurface"
        android:inputType="text"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textColorHint="?attr/colorOutline"
        tools:text="@string/example_paragraph2"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/mtbNoteTopBar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtNoteContent"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/content"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textColorHint="?attr/colorOutline"
        tools:text="@string/example_paragraph2"
        android:gravity="top"
        android:textAppearance="?attr/textAppearanceBody1"
        android:inputType="textMultiLine"
        android:background="?attr/colorSurface"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/edtNoteTitle"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
