<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SettingActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtbSettingTopBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_round_arrow_back_24"
        app:navigationContentDescription="@string/go_back"
        app:title="@string/settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/mtbSettingTopBar">

        <com.google.android.material.textview.MaterialTextView
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_note" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_note" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_note" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
