<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/confirm_dialog_shape">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirmDialogTitle"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:text="@string/delete_note"
        android:textColor="#1a1a1a" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirmDialogQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvConfirmDialogTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/delete_this_note"
        android:textColor="#646464" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvConfirmDialogQuestion"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="4dp"
            app:cardCornerRadius="100dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirmDialogNo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#efefef"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#646464" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="4dp"
            app:cardCornerRadius="100dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirmDialogYes"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="#0c83fe"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>


</RelativeLayout>
